<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!--Activity Names -->
    <string name="title_activity_audio_settings">AudioSettings</string>
    <string name="title_activity_fb_share">FbShare</string>
    <string name="title_activity_levels">LevelsActivity</string>
    <string name="title_activity_select_package">SelectPackageActivity</string>
    <string name="title_activity_home_screen">HomeScreenActivity</string>
    <string name="title_activity_high_scores">HighScoresActivity</string>
    <string name="title_activity_game_screen">GameScreenActivity</string>

    <!--Strings used in main activity-->
    <string name="app_name">Cosmo Fighter</string>
    <string name="title_instructions_button">Instructions</string>

    <!--String used in Instructions activity-->
    <string name="title_instruc_text"> Tap to move fighter. Escape from Debris and reach the final Flag.
                                       Collect Lives to increase life count.Collect coins to increase the score by 50. Colliding with a Debris will decrease the score by 50.
                                       Play a level to unlock the next series. Selection of packages changes directions of obstacles. </string>


    <!--Strings used in home screen activity -->
    <string name="title_start_playing">"  Start Playing  "</string>
    <string name="title_play_game">"   Play Game   "</string>
    <string name="title_action_settings">"   Settings   "</string>
    <string name="title_share">"   Share   "</string>
    <string name="title_exit">"   Exit   "</string>

    <!--Strings used in select packages screen-->
    <string name="title_select_package">Select Package</string>
    <string name="title_package1">Package 1</string>
    <string name="title_package2">Package 2</string>
    <string name="title_package3">Package 3</string>

    <!--Strings used in select levels screen-->
    <string name="title_select_level">"Select Level"</string>
    <string name="title_easy">Easy</string>
    <string name="title_medium">Medium</string>
    <string name="title_hard">Hard</string>

    <!--Strings used in Audio settings screen -->
    <string name="title_musiclbl">"   Music   "</string>
    <string name="title_audiolbl">"   Audio   "</string>
    <string name="title_select_fighter">"   Select Fighter   "</string>

    <!--Strings used for sharing activity-->
    <string name="title_fbshare_login">"  Back  "</string>
    <string name ="app_id">1635261726728001</string>           <!-- app id to connect ot facebook-->

    <!--Strings used in high scores screen-->
    <string name="title_player1">"Player 1"</string>
    <string name="title_high_scores">"Player High Scores"</string>
    <string name="title_home">"Home"</string>
    <string name="title_continue">"Continue"</string>
    <string name="title_gameScore">0</string>

    <!--Strings used as constants across applications-->
    <string name="APP_PREFERENCES">AppPreferences</string>
    <string name="MUSICON">isMusicOn</string>
    <string name="SOUNDON">isSoundOn</string>
    <string name="FIRSTRUN">isFirstRun</string>
    <string name="PACKAGE">CurrentPackage</string>
    <string name="PACKAGE_STARS">StarsInPackage</string>
    <string name="LEVEL_STARS">StarsInLevel</string>
    <string name="LEVEL">CurrentLevel</string>
    <string name="PLAYER_ID">CurrentPlayerId</string>
    <string name="PACKAGE_NAME">Package_Name</string>
    <string name="GAME_SCORE">Game_Score</string>
    <string name="FLAG_REACHED">Flag_Reached</string>
    <string name="DATABASE_NAME">cosmofighter</string>
    <string name="PREVIOUS_SCREEN">PreviousScreen</string>
    <string name="title_activity_instructions">Instructions</string>
    <string name="FIGHTER_NAME">FighterName</string>
    <string name="ic_fighter0_HEIGHT">90</string>
    <string name="ic_fighter0_WIDTH">96</string>
    <string name="ic_fighter1_HEIGHT">90</string>
    <string name="ic_fighter1_WIDTH">110</string>
    <string name="ic_fighter2_HEIGHT">96</string>
    <string name="ic_fighter2_WIDTH">126</string>
    <string name="ic_fighter3_HEIGHT">90</string>
    <string name="ic_fighter3_WIDTH">113</string>
    <string name="title_activity_select_fighter">select_fighter</string>

</resources>