<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".LevelsActivity"
    android:background="@drawable/mainbackground"
    android:orientation="vertical">

    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView android:text="@string/app_name" android:layout_width="match_parent"
            android:layout_height="85dp"
            android:textSize="50sp"
            android:textColor="#eaa52d"
            android:id="@+id/app_name"
            android:textStyle="bold"
            android:singleLine="false"
            android:gravity="center"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/app_name">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="68dp"
                android:text="@string/title_select_level"
                android:id="@+id/textLevel2"
                android:textColor="#eaa52d"
                android:focusableInTouchMode="true"
                android:textSize="35sp"
                android:textAlignment="center"
                android:gravity="center"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_select_level"
                android:id="@+id/textLevel"
                android:textColor="#eaa52d"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:textSize="30sp"
                android:textAlignment="center"
                android:gravity="center"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/easy_layout"
                android:layout_width="match_parent"
                android:layout_height="117dp"
                android:orientation="horizontal"
                android:weightSum="1">
                <Button
                    android:layout_width="145dp"
                    android:layout_height="66dp"
                    android:text="@string/title_easy"
                    android:id="@+id/easy_button"
                    android:background="@drawable/roundedbutton"
                    android:textSize="30sp"
                    android:layout_marginTop="25dp"
                    android:paddingEnd="0dp"
                    android:paddingStart="0dp"
                    android:visibility="visible"
                    android:contextClickable="false"
                    android:onClick="StartGame" />

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="66dp"
                    android:layout_marginTop="25dp"
                    android:id="@+id/imgLvl1Stars"
                    android:src="@drawable/stars0" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/medium_layout"
                android:layout_width="match_parent"
                android:layout_height="117dp"
                android:orientation="horizontal"
                android:weightSum="1">
                <Button
                    android:layout_width="145dp"
                    android:layout_height="66dp"
                    android:text="@string/title_medium"
                    android:id="@+id/medium_button"
                    android:background="@drawable/roundedbutton"
                    android:textSize="30sp"
                    android:layout_marginTop="25dp"
                    android:paddingEnd="0dp"
                    android:paddingStart="0dp"
                    android:visibility="visible"
                    android:contextClickable="false"
                    android:onClick="StartGame" />

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="66dp"
                    android:layout_marginTop="25dp"
                    android:id="@+id/imgLvl2Stars"
                    android:src="@drawable/stars0" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/hard_layout"
                android:layout_width="match_parent"
                android:layout_height="117dp"
                android:orientation="horizontal"
                android:weightSum="1">
                <Button
                    android:layout_width="145dp"
                    android:layout_height="66dp"
                    android:text="@string/title_hard"
                    android:id="@+id/hard_button"
                    android:background="@drawable/roundedbutton"
                    android:textSize="30sp"
                    android:layout_marginTop="25dp"
                    android:paddingEnd="0dp"
                    android:paddingStart="0dp"
                    android:visibility="visible"
                    android:contextClickable="false"
                    android:onClick="StartGame" />

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="66dp"
                    android:layout_marginTop="25dp"
                    android:id="@+id/imgLvl3Stars"
                    android:src="@drawable/stars0" />
            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>

</LinearLayout>


